--- a/app/templates/components/menu-block.hbs
+++ b/app/templates/components/menu-block.hbs
@@ -6,7 +6,8 @@
         <li>{{#link-to 'profile'}}{{t 'menu.profile'}} ({{currentUser.user.name}}){{/link-to}}</li>
         <li><a {{action 'logout' on='click'}}>{{t "menu.logout"}}</a></li>
     {{else}}
-    <li><a {{action 'toggleLogin' on='click'}}>{{t "menu.login"}}</a></li>
+        <li>{{#link-to 'register'}}{{t 'menu.register'}}{{/link-to}}</li>
+        <li><a {{action 'toggleLogin' on='click'}}>{{t "menu.login"}}</a></li>
     {{/if}}
 </ul>
 
