Added some initial code for Pages

--- a/app/templates/components/login-form.hbs
+++ b/app/templates/components/login-form.hbs
@@ -8,5 +8,5 @@
     {{/if}}
     <button>{{t 'login.button'}}</button>
 
-    {{#link-to 'register'}} {{t 'register.link'}} {{/link-to}}
+    {{#link-to 'register'}} {{t 'login.register'}} {{/link-to}}
 </form>
